// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container component should match snapshot as default 1`] = `
<DocumentFragment>
  <button
    class="sc-bdVaJa cboeHo"
  >
    Test
  </button>
</DocumentFragment>
`;

exports[`Container component should match snapshot with all measures 1`] = `
<DocumentFragment>
  <button
    class="sc-bdVaJa crZiJf"
  >
    Test
  </button>
</DocumentFragment>
`;

exports[`Container component should match snapshot with all measures 2`] = `
<DocumentFragment>
  <button
    class="sc-bdVaJa cboeHo"
  >
    Test
  </button>
</DocumentFragment>
`;

exports[`Container component should match snapshot with all measures 3`] = `
<DocumentFragment>
  <button
    class="sc-bdVaJa bhWoTL"
  >
    Test
  </button>
</DocumentFragment>
`;

exports[`Container component should match snapshot with all measures 4`] = `
<DocumentFragment>
  <button
    class="sc-bdVaJa fAlvFz"
  >
    Test
  </button>
</DocumentFragment>
`;

exports[`Container component should match snapshot with all props 1`] = `
<DocumentFragment>
  <button
    class="sc-bdVaJa bhWoTL"
    color="primary"
  >
    Test
  </button>
</DocumentFragment>
`;
